@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 12-08-2005 fixed: when resuming normal playback speed, video would jump ahead a couple of seconds
   - 12-08-2005 changed: detection of interlaced material somewhat improved
   - 12-08-2005 changed: made rewind search for the right time pos after a seek by dropping frames after seek untill at righ position
   - 07-08-2005 updated codec.conf [ 1252569 ]
